# plugin-web-google

./: .gitignore  CMakeLists.txt  image.qrc  mainfest.json  pluginconfig.json  qml.qrc
qml/plugin/web/: google.qml
qml/web/: google.qml
src/: Google.cpp  Google.h  google.cpp  google.h  plugin-web-google_global.h
